# tabletop-dashboard

./: .gitignore  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
src/tabletop_dashboard/: __init__.py  config.py  main.py  scheduler.py
src/tabletop_dashboard/calendar/: __init__.py  fetcher.py  models.py
src/tabletop_dashboard/display/: __init__.py  base.py  mock.py  renderer.py
src/tabletop_dashboard/display/views/: __init__.py  daily_agenda.py  main_dashboard.py  mini_month.py
tests/: conftest.py  test_calendar.py  test_renderer.py  test_views.py
