[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tabletop-dashboard"
version = "0.1.0"
description = "e-Ink tabletop dashboard displaying calendar events"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
    "caldav>=1.3",
    "icalendar>=5.0",
    "python-dateutil>=2.8",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-requests>=2.31",
    "types-python-dateutil>=2.8",
]

[project.scripts]
tabletop-dashboard = "tabletop_dashboard.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tabletop_dashboard --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
